修正アップ

--- a/public/index.html
+++ b/public/index.html
@@ -48,9 +48,7 @@
         <header>
             <div class="header_inner">
                 <div class="header_left">
-                    <!-- <div class="header-title">尿の郵送不要の
-                        がんリスク示唆キット
-                    </div> -->
+                    <img src="img/header_catch.svg" alt="">
                     <a href="index.html"><img class="header_logo CTA" src="img/logo.svg" alt="Pstageのロゴ"></a>
                 </div>
                 <div class="hamburger_btn sp"><span></span><span></span><span></span></div>
@@ -79,17 +77,17 @@
                     <div class="back_deco back_deco--02"></div>
                     <div class="back_deco back_deco--03 pc"></div>
                 </div>
+                <img  class="kv_all" src="img/kv.jpg" alt="トップイメージ">
+                <div class="CTA"><a class="kv_button" href="#price"></a></div>
                 <div class="kv_wrapper">
                     <div class="kv_upper">
-                        <div class="kv_upper_left">
+                        <!-- <div class="kv_upper_left">
                             <div class="kv_text01"><span class="text_deco_l"></span>ステージ0の<br>がんリスクにも対応<span class="text_deco_r"></span></div>
                             <div class="kv_text02">
                                 <p class="pc">早期段階のがんリスクを示唆</p>
                                 <img class="pc dotted" src="img/dotted_pc.svg" alt="">
                                 <p class="sp_line01 sp">早期段階の</p>
-                                <!-- <img class="dotted_sp_01 sp" src="../images/dotted_sp_01.svg" alt=""> -->
                                 <p class="sp_line02 sp">がんリスクを示唆</p>
-                                <!-- <img class="dotted_sp_02 sp" src="../images/dotted_sp_02.svg" alt=""> -->
                             </div>
                             <div class="kv_text03"><p>自宅<span class="small_text">で</span>カンタン！</p><p>おしっこ<span class="small_text">（Pee）</span><span class="small_text">で</span></p><p>がん<span class="small_text">の</span>リスク<span class="
                                 annotation small_text">がわかる</span></p></div>
@@ -100,10 +98,7 @@
                                 <div class="kv_application_anime"></div>
                                 <p>お申し込みは<br>こちら</p>
                             </a>
-                            <!-- <div class="kv_application--desc">
-                                健康的な社会生活を長く維持するために、<br>3カ月～6カ月に1回程度、<br>定期的ながんリスク確認を推奨します。
-                            </div> -->
-                        </div>
+                        </div> -->
                     </div>
                     <div class="kv_middle">
                         <div class="kv_middle_item">
