マージン修正

--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,7 @@
                         <div class="kv_middle_item">
                             <p><span class="small_text">写真を撮って</span><br class="pc">専用アプリ<span class="small_text">で送るだけ！</span></p>
                             <span class="small_text" style="color: #FBD83B;">※尿の郵送不要</span>
-                            <div class="smartphone_img"><img src="img/smartphone_01.svg" alt="スマートフォンの画像"></div>
+                            <!-- <div class="smartphone_img"><img src="img/smartphone_01.svg" alt="スマートフォンの画像"></div> -->
                         </div>
                         <div class="kv_middle_item">
                             <p class="pc"><span class="small_text">他社では類を見ない</span><br class="pc">最大限のアフターケア</p>
