--- a/public/index.html
+++ b/public/index.html
@@ -581,7 +581,7 @@
                                             </a>
                                         </div>
                                     </div>
-                                    <div class="course_middle">
+                                    <!-- <div class="course_middle">
                                         <img src="img/course_deco_02.svg" alt="定期測定コース限定特典">
                                         <p class="pc">判定結果によってメーカーから<br>
                                             医療機関での検査を<br class="sp">推奨させていただいた場合、<br>
@@ -589,7 +589,7 @@
                                         <p class="sp">判定結果によってメーカーから<br>
                                             医療機関での検査を<br class="sp">推奨させていただいた場合、<br>
                                             検査費用の最大<span class="large_text red_text">10万円</span>分を<br class="sp">お支払いします。</p>
-                                    </div>
+                                    </div> -->
                                     <div class="course_bottom">
                                         <p class="course_bottom_title">こんな人におすすめ！</p>
                                         <div class="course_bottom_content">
